--- a/chat.html
+++ b/chat.html
@@ -12,14 +12,20 @@
 </div>
 <div id="messaging" style="display: none">
     <label style="font-size: 14px; font-family: Arial,serif" for="message">Message:</label>
+    <select id="users">
+        <option>All</option>
+    </select>
     <input style="font-size: 14px" id="message" value=""/>
     <button style="font-size: 14px" onclick="send()">send</button>
+    <button style="font-size: 14px" onclick="stat()">stat</button>
     <button style="font-size: 14px" onclick="exit()">exit</button>
 </div>
 <pre id="output"></pre>
 <script>
+    let host = "localhost:8286";
     let socket;
     let username = '';
+    let users = document.getElementById("users");
     let output = document.getElementById("output");
     let connection = document.getElementById("connection");
     let messaging = document.getElementById("messaging");
@@ -30,16 +36,19 @@
             return
         }
 
-        output.innerHTML = 'Connecting... ';
-        socket = new WebSocket("ws://localhost:8286/chat/"+username);
+        output.innerHTML = '';
+        socket = new WebSocket("ws://" + host + "/chat/" + username);
 
         socket.onopen = function () {
-            output.innerHTML += "OK\n";
+            output.innerHTML += "<div style='color: lightsteelblue'>[Connected]</div>";
             connection.style.display = "none";
             messaging.style.display = "block";
+
+            let msg = {username: username, type: "list"};
+            socket.send(JSON.stringify(msg));
         };
         socket.onclose = function () {
-            output.innerHTML += "Connection closed\n";
+            output.innerHTML += "<div style='color: lightsteelblue'>[Connection closed]</div>";
             connection.style.display = "block";
             messaging.style.display = "none";
         };
@@ -48,17 +57,57 @@
             if (e.data !== undefined) {
                 let msg = JSON.parse(e.data);
                 if (msg !== undefined) {
-                    if (msg.type !== "public") {
-                        output.innerHTML += "<i>" + msg.username + " " + msg.message + "</i>\n";
-                    } else {
-                        output.innerHTML += "<b>" + msg.username + ":</b> " + msg.message + "\n";
+                    // рисуем сообщение
+                    switch (msg.type) {
+                        case "public":
+                            output.innerHTML += "<div><b>" + msg.username + ":</b> " + msg.message + "</div>";
+                            break;
+                        case "private":
+                            output.innerHTML += "<div style='color: darkred'><b>" + msg.username + ":</b> " + msg.message + "</div>";
+                            break;
+                        case "stat":
+                            output.innerHTML += "<div style='color: gray'>" + msg.message + "</div>";
+                            break;
+                        case "enter":
+                            output.innerHTML += "<div style='color: lightsteelblue'>" + msg.username + " " + msg.message + "</div>";
+                            // добавляем в юзеры
+                            if (msg.username !== username) {
+                                let opt = document.createElement('option');
+                                opt.appendChild(document.createTextNode(msg.username));
+                                opt.value = msg.username;
+                                users.appendChild(opt);
+                            }
+                            break;
+                        case "exit":
+                            output.innerHTML += "<div style='color: lightsteelblue'>" + msg.username + " " + msg.message + "</div>";
+                            // удаляем из списка юзеров
+                            if (msg.username !== username) {
+                                for (let i = 0; i < users.length; i++)
+                                    if (users.options[i].value === msg.username) {
+                                        users.removeChild(users.options[i]);
+                                        return;
+                                    }
+                            }
+                            break;
+                        case "list":
+                            // формируем первоначальный список
+                            let str_users = msg.message.split('|');
+                            console.log(msg.message, str_users);
+                            for (let i=0; i<str_users.length; i++)
+                                if (str_users[i] !== username) {
+                                    let opt = document.createElement('option');
+                                    opt.appendChild(document.createTextNode(str_users[i]));
+                                    opt.value = str_users[i];
+                                    users.appendChild(opt);
+                                }
+                            break;
                     }
                 }
             }
         };
 
         socket.onerror = () => {
-            output.innerHTML += "ERROR\n";
+            output.innerHTML += "<div style='color: lightsteelblue'>[Connection error]</div>";
             connection.style.display = "block";
             messaging.style.display = "none";
         };
@@ -66,21 +115,35 @@
 
     function send() {
         let msg_text = document.getElementById("message").value;
-        if (!socket.isConnected || username === '' || msg_text === '') {
+        if (socket === undefined || username === '' || msg_text === '') {
             return
         }
 
-        let msg = {username: username, type: "public", message: msg_text};
-        socket.send(msg);
+        let msg;
+        if (users.value !== "All") {
+            msg = {username: username, to: users.value, type: "private", message: msg_text};
+        } else {
+            msg = {username: username, type: "public", message: msg_text};
+        }
+        socket.send(JSON.stringify(msg));
+        document.getElementById("message").value = '';
+    }
+
+    function stat() {
+        if (socket === undefined || username === '') {
+            return
+        }
+
+        let msg = {username: username, type: "stat"};
+        socket.send(JSON.stringify(msg));
     }
 
     function exit() {
-        if (!socket.isConnected || username === '') {
+        if (socket === undefined || username === '') {
             return
         }
 
-        let msg = {username: username, type: "exit"};
-        socket.send(msg);
+        socket.close();
     }
 </script>
 </body>
